Fixing background not showing in deployment

--- a/style.css
+++ b/style.css
@@ -138,7 +138,7 @@ header {
   font-family: var(--cocogoose);
   font-size: 2.1rem;
   line-height: 1;
-  background-image: url(/assets/mood-berlin-velodrom2.jpg);
+  background-image: url(assets/mood-berlin-velodrom2.jpg);
   background-size: cover;
   background-position: center;
   background-clip: text;
@@ -176,7 +176,7 @@ header {
 /* program section */
 
 .program-section {
-  background-image: url(/assets/symbol-scatter-haikei.png);
+  background-image: url(assets/symbol-scatter-haikei.png);
   padding: 5%;
   display: grid;
 }
